package edu.unisabana.pizzafactory.model.interfaces;

public interface Amasador {
    void amasar();
}