package edu.unisabana.pizzafactory.model.interfaces;

public interface Horneador {
    void hornear();
}
