package edu.unisabana.pizzafactory.model.interfaces;

public interface Moldeador {
    void moldearPizzaPequena();
    void moldearPizzaMediana();
}